...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(widget.title),
      ),
      body: ListView.builder(
        key: const Key('todos_list'),
        itemBuilder: _itemBuilder,
        itemCount: _todos.length,
      ),
      floatingActionButton: FloatingActionButton(
        key: const Key('add_fab'),
        onPressed: () => _addNewToDoItem(context),
...
